# WaEnhancer

./: .gitignore  EDITED_MESSAGE_FIX.md  MONET_BUBBLE_COLORS.md  PERFORMANCE_FIXES.md  build_error.txt  build_error_2.txt  build_log.txt  build_log_notification.txt  build_log_release.txt  build_log_release_v2.txt  build_log_schedule_ui.txt  build_log_schedule_ui_v2.txt  build_log_smart_service.txt  build_log_smart_service_v2.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  build_output_5.txt  build_output_6.txt  build_output_7.txt  changelog.txt  gradle.properties  ids_log.txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VoiceProcessor.cpp  VoiceProcessor.h  voicechanger_jni.cpp
app/src/main/res/drawable/: audio_speed_container_bg.xml  audio_speed_seekbar_progress.xml  audio_speed_seekbar_thumb.xml  badge_background_active.xml  badge_background_sent.xml  bg_chip_small.xml  chip_background.xml  chip_background_outline.xml  gradient_success.xml  ic_audio_speed.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_schedule_custom.xml  ic_search.xml  toolbar_background.xml
app/src/main/res/layout/: activity_about.xml  activity_auto_reply_rules.xml  activity_call_recording_settings.xml  activity_contact_picker.xml  activity_create_edit_scheduled_message.xml  activity_main.xml  activity_scheduled_messages_list.xml  activity_search.xml  activity_settings_search.xml  dialog_filter_items.xml  (+16 more)
docs/: README.md
gradle/wrapper/: gradle-wrapper.properties
(+144 files in other folders)
